2012-05-10 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V02-05-05
	* limit core dump size to 0 with two or more restarts in a run
	* parameter crashestoDump unsignedInt can override this value
	* it detects this using status from the waitpid call

2012-05-02 Srecko morovic <srecko.morovic@cern.ch>

	* tag V02-05-04
	* merging new forking method support
	* new forking can be turned off with xdaq parameter:
	* forkInEDM unsignedInt 0

2012-04-30 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V02-05-02
	* ShmOutputModuleRegistry moved to Modules

2012-04-27 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V02-05-01
	* fixing possible invalid write when pid from invalid
	  location is 0 (passing waitpid check)
	* related thread safety improvements

2012-04-17 Srecko Morovic <srecko.smorovic@cern.ch>

	* tag V02-05-00
	* support for fork in DaqSource (framework thread)
	* requires new DaqSource, Modules and Utilities

2011-10-21 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-04-17
	* fix compiler warning 
	
2011-10-20 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-04-16
	* fixes and additions to statistics gathering for iDie
	* improvements to handling of subWeb requests
	* incorporated some fixes from Giulio for Coverity warnings 

2011-09-27 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-04-15
	* call prctl ( PR_SET_PDEATHSIG, SIGKILL ); to fix pb with recycle 
	immediately after start
	* add flip chart of busy fraction from cpustat  
	* fill microstate legenda every 80 instances
	
2011-08-17 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-04-14
	* changes to remove circular dep between Utilities and Modules

2011-07-20 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-04-12
	* hack away possibly taken lock coming from xdaq update or 
	* refcounted pointers
	
2011-06-27 Emilio Meschi <emilio.meschi@cern.ch>

	* tag V02-04-11
	* comment out scalers flashlist refresh
	* refresh microstate legenda every 10 lumisections
